# nucleation-packages

./: .gitignore  .npmrc  .prettierignore  .semgrepignore  BOOK_STRUCTURE.md  CONTRIBUTING.md  DOCUMENTATION.md  LATTICEFORGE_MATHEMATICAL_FOUNDATIONS.md  LICENSE  PROMETHEUS.md  README.md  ROADMAP.md  SECURITY.md  STATIC_ANALYSIS_REPORT.md  Supabase Performance Security Lints (sylqhqewqtggjqgwdsjf).csv  aimo3-qwen-awq.ipynb  aimo3_deepseek_destroyer.ipynb  aimo3_elle_11dec.ipynb  aimo3_elle_submission.ipynb  aimo3_qwen_awq.ipynb  bansheev6.ipynb  elles-bells.ipynb  eslint.config.js  github errors.txt  latticeforge.ai.har  log1.txt  package-lock.json  package.json  training_examples_rows.sql  tsconfig.base.json  tsconfig.json  vercel.json  vitest.config.ts  woop.py  working-notebook.ipynb
.github/: dependabot.yml
art_assets/: CATALOG.md  client_secret_480915076360-8u9kd0cv4hijljmrkf0qob35le0d0nj9.apps.googleusercontent.com.json  compass_artifact_wf-abb4060c-b8b6-4857-90f7-408051037fc2_text_markdown.md  products.csv
book/: APPENDIX_A_FORMAL_MATHEMATICS.docx  APPENDIX_A_FORMAL_MATHEMATICS.md  APPENDIX_B_COMPLETE_CODE.docx  APPENDIX_B_COMPLETE_CODE.md  APPENDIX_C_HISTORICAL_TIMELINE.docx  APPENDIX_C_HISTORICAL_TIMELINE.md  APPENDIX_D_GLOSSARY.docx  APPENDIX_D_GLOSSARY.md  APPENDIX_E_PAPER_SUMMARIES.docx  APPENDIX_E_PAPER_SUMMARIES.md  APPENDIX_F_BIBLIOGRAPHY.docx  APPENDIX_F_BIBLIOGRAPHY.md  APPENDIX_G_PROMETHEUS_METHODOLOGY.md  CHAPTER_02_SPEAKING_PARROT.md  (+47 more)
research/rust/ryanaimo-clustering/: Cargo.toml  pyproject.toml
research/rust/ryanaimo-clustering/src/: lib.rs
(+473 files in other folders)
