[package]
name = "ryanaimo-clustering"
version = "0.1.0"
edition = "2021"
description = "Fast value clustering for AIMO3 - 88% error reduction"
authors = ["Ryan J Cardwell (Archer Phoenix)"]

[lib]
name = "ryanaimo_clustering"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module"] }
rayon = "1.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
