[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ryanaimo-clustering"
version = "0.1.0"
description = "Fast value clustering for AIMO3 - 88% error reduction"
authors = [{name = "Ryan J Cardwell", email = "archerphoenix@example.com"}]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
